Added Heart, Finished tits

--- a/FrankyBirth/Pages/FrankyBirth.html
+++ b/FrankyBirth/Pages/FrankyBirth.html
@@ -34,7 +34,7 @@
             Without furthur ado, here are many things that are cool about you
         </p>
 
-        <div ID="intro" class="button" style="text-align: right; margin: 15px;">
+        <div ID="intro" class="button First" style="text-align: right; margin: 15px;">
             <a href="thing1.html">First Thing!</a>
         </div>
 
@@ -44,5 +44,5 @@
         <source src="sounds/JohntheRevelatorGovtMule.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
--->
+
 </body>
