--- a/FrankyBirth/Pages/thing1.html
+++ b/FrankyBirth/Pages/thing1.html
@@ -8,7 +8,7 @@
 <body style="background-color: rgba(242, 171, 179, 1)">
 
     <marquee ID="titty" behavior="slide" direction="left" scrollamount="75">
-        Your tits                                                 
+        Your Tits                                                 
     </marquee>
 
     <marquee ID="titty2" behavior="slide" direction="left" scrollamount="75">
@@ -16,8 +16,8 @@
     </marquee>
 
     
-    <marquee ID="heart" behavior="slide" direction="left" scrollamount="40" scrolldelay="">
-        <a href="heart.html">(and so is your heart)</a>
+    <marquee ID="second" class="button" behavior="slide" direction="up" scrollamount="10" scrolldelay="300">
+        <a  href="heart.html">(and so is your heart)</a>
     </marquee>
 
 </body>
