Mediocre Img Fill
Set up image fill, not consistent functionality nor fully desirable

--- a/SplitPage.html
+++ b/SplitPage.html
@@ -35,28 +35,30 @@
 
     <div class="slideshow-container">
 
-      <div class="slides fade">
-        <div class="slidetitle">This is the first Cheezcat</div>
-        <img src="MarketableNugget/ListRandomizer/CheezCat1.jpg" style="width:100%">
-        <div class="slideinfo">Here is info about the Cheezcat</div>
+      <div ID="fill" class="slides fade">
+        <div class="projtitle">This is the first Cheezcat</div>
+        <div class="projtitle projdate">October 2020</div>
+        <img ID="fill" src="MarketableNugget/ListRandomizer/CheezCat1.jpg" style="width:100%">
+        <div class="projinfo">Here is info about the Cheezcat</div>
       </div>
 
-      <div class="slides fade">
-        <div class="slidetitle">This is the second Cheezcat</div>
-        <img src="MarketableNugget/ListRandomizer/CheezCat2.jpg" style="width:100%">
-        <div class="slideinfo">Here is info about the Cheezcat</div>
+      <div ID="fill" class="slides fade">
+        <div class="projtitle">This is the BIG Image</div>
+        <div class="projtitle projdate">October 2020</div>
+        <img ID="fill" src="MarketableNugget/ListRandomizer/BIGimage.jpg" style="width:100%">
+        <div class="projinfo">Here is info about the Cheezcat</div>
       </div>
 
-      <div class="slides fade">
-        <div class="slidetitle">This is the third Cheezcat</div>
-        <img src="MarketableNugget/ListRandomizer/CheezCat3.jpg" style="width:100%">
-        <div class="slideinfo">Here is info about the Cheezcat</div>
+      <div ID="fill" class="slides fade">
+        <div class="projtitle">This is the third Cheezcat</div>
+        <img ID="fill" src="MarketableNugget/ListRandomizer/CheezCat3.jpg" style="width:100%">
+        <div class="projinfo">Here is info about the Cheezcat</div>
       </div>
 
-      <div class="slides fade">
-        <div class="slidetitle">This is the fourth Cheezcat</div>
-        <img src="MarketableNugget/ListRandomizer/CheezCat4.jpg" style="width:100%">
-        <div class="slideinfo">Here is info about the Cheezcat</div>
+      <div ID="fill" class="slides fade">
+        <div class="projtitle">This is the fourth Cheezcat</div>
+        <img ID="fill" src="MarketableNugget/ListRandomizer/CheezCat4.jpg" style="width:100%">
+        <div class="projinfo">Here is info about the Cheezcat</div>
       </div>
 
       <a class ="prev" onclick="plusSlides(-1)">&#10094;</a>
