Updating Image settings, proper stretch occuring

--- a/SplitPage.html
+++ b/SplitPage.html
@@ -35,28 +35,38 @@
 
     <div class="slideshow-container">
 
-      <div ID="fill" class="slides fade">
-        <div class="projtitle">This is the first Cheezcat</div>
-        <div class="projtitle projdate">October 2020</div>
-        <img ID="fill" src="MarketableNugget/ListRandomizer/CheezCat1.jpg" style="width:100%">
+      <div class="slides fade">
+        <div class="proj">
+          <p class="projtitle">This is the first Cheezcat</p>
+          <p class = "projtitle projdate">October 2020</p>
+        </div>
+        <img ID="fill" src="MarketableNugget/ListRandomizer/CheezCat1.jpg">
+        <div class="projinfo">Here is info about the Cheezcat</div>
+      </div>
+
+      <div class="slides fade">
+        <div class="proj">
+          <p class="projtitle">This is the BIG Image</p>
+          <p class="projtitle projdate">October 2020</p>
+        </div>
+        <img ID="fill" src="MarketableNugget/ListRandomizer/BIGimage.jpg">
         <div class="projinfo">Here is info about the Cheezcat</div>
       </div>
 
       <div ID="fill" class="slides fade">
-        <div class="projtitle">This is the BIG Image</div>
-        <div class="projtitle projdate">October 2020</div>
-        <img ID="fill" src="MarketableNugget/ListRandomizer/BIGimage.jpg" style="width:100%">
-        <div class="projinfo">Here is info about the Cheezcat</div>
-      </div>
-
-      <div ID="fill" class="slides fade">
-        <div class="projtitle">This is the third Cheezcat</div>
+        <div class="projtitle">
+          <p>This is the third Cheezcat</p>
+          <p class="projdate">October 2020</p>
+        </div>
         <img ID="fill" src="MarketableNugget/ListRandomizer/CheezCat3.jpg" style="width:100%">
         <div class="projinfo">Here is info about the Cheezcat</div>
       </div>
 
       <div ID="fill" class="slides fade">
-        <div class="projtitle">This is the fourth Cheezcat</div>
+        <div class="projtitle">
+          <p>This is the fourth Cheezcat</p>
+          <p class="projdate">October 2020</p>
+        </div>
         <img ID="fill" src="MarketableNugget/ListRandomizer/CheezCat4.jpg" style="width:100%">
         <div class="projinfo">Here is info about the Cheezcat</div>
       </div>
