--- a/TOC.html
+++ b/TOC.html
@@ -17,14 +17,14 @@
     </h1>
    
     <h2>
-        <p>Hi Franky! Here's some basic code for you, which includes separate pages and links between pages <3</p> 
+        <p>In an effort to make CSS and HTML accessible to myself and those who are also learning web development, I have created a repository of individual code snippets and brief descriptions of their functionality.</p> 
     </h2>
 
     <h3>
         <p>
             In the html and ccs code, I'll include some comments explaining what code does what.
             <br>
-            It should be relatively straightforward to copy paste :)
+            It should be relatively straightforward to copy paste into relevant pages :)
         </p>
     </h3>
 
