--- a/TOC.html
+++ b/TOC.html
@@ -17,7 +17,11 @@
     </h1>
    
     <h2>
-        <p>In an effort to make CSS and HTML accessible to myself and those who are also learning web development, I have created a repository of individual code snippets and brief descriptions of their functionality.</p> 
+        <p>
+            In an effort to make CSS and HTML accessible to myself and those who are also learning web development, 
+            <br>
+            I have created a repository of individual code snippets and brief descriptions of their functionality.
+        </p> 
     </h2>
 
     <h3>
@@ -46,6 +50,10 @@
         <a href="HoverMenu.html#">Hover Menu Experiment</a>
         <br><br>
         <a href="ListRand.html#">List Randomizer!</a>
+        <br><br>
+        <a href="Slideshow.html">Slideshow</a>
+        <br><br>
+        <a href="SplitPage.html">SplitPage</a>
     </h4>
 
 </body>
